fixed spacing issue with title listing

--- a/app/assets/stylesheets/_user_log_sign.scss
+++ b/app/assets/stylesheets/_user_log_sign.scss
@@ -4,7 +4,7 @@
     max-width: 300px;
     padding: 19px 29px 29px;
     margin: 0 auto 20px;
-    background-color: #E2D3D3;
+    background-color:  #CDC382;   
     border: 1px solid #e5e5e5;
     -webkit-border-radius: 5px;
        -moz-border-radius: 5px;
