--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,10 +64,6 @@ main {
    margin-top: 50px;
 }
 
-.btn {
-
-
-}
 
 .btn:hover , .btn-group a.btn:hover, .remove-buy-cartitem a.btn:hover{
    background-color: gray !important;
